# hybrid

./: CMakeLists.txt  main.cpp
include/glad/: gl.h
scripts/: shader_embedder.py
shaders/: shader.frag  shader.vert
shaders/include/: Color.hpp  Shader.cpp  Shader.hpp  Uniform.hpp
shaders/include/shaders/: shader.hcs
src/: Camera.cpp  Camera.hpp  Hybrid.hpp  IMatrix.hpp  Model.cpp  Model.hpp  Renderer.cpp  Renderer.hpp  VertexStack.hpp
